footer media query changed to fix font size on mobile

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -38,7 +38,7 @@ footer span {
 }
 
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 900px) {
     #footer {
         font-size: 0.6rem;
     }
